tests/miniJava/pos/000741_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) java = 0 ; else java = 0 ; } }
