tests/miniJava/neg/001272_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int class java { } 0 ] ; } }
